@@ -32,7 +32,7 @@ R"(
 // The main reduction kernel, performing the multiplication and the majority of the operation
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(WGS1, 1, 1)))
 #endif
 void Xnrm2(const int n,
@@ -77,7 +77,7 @@ void Xnrm2(const int n,
 // be launched with a single workgroup only.
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(WGS2, 1, 1)))
 #endif
 void Xnrm2Epilogue(const __global real* restrict input,
