@@ -24,7 +24,7 @@ R"(
 // Full version of the kernel with offsets and strided accesses
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(WGS, 1, 1)))
 #endif
 void Xscal(const int n, const real_arg arg_alpha,
@@ -46,7 +46,7 @@ void Xscal(const int n, const real_arg arg_alpha,
 // dividable by 'VW', 'WGS' and 'WPT'.
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(WGS, 1, 1)))
 #endif
 void XscalFast(const int n, const real_arg arg_alpha,
