@@ -220,7 +220,7 @@ INLINE_FUNC void XgemmDirect(const int kSizeM, const int kSizeN, const int kSize
 // Direct version of the GEMM kernel with [A, B] = [non-transposed, non-transposed]
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(MDIMCD, NDIMCD, 1)))
 #endif
 void XgemmDirectNN(const int kSizeM, const int kSizeN, const int kSizeK,
@@ -239,7 +239,7 @@ void XgemmDirectNN(const int kSizeM, const int kSizeN, const int kSizeK,
 // Direct version of the GEMM kernel with [A, B] = [non-transposed, transposed]
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(MDIMCD, NDIMCD, 1)))
 #endif
 void XgemmDirectNT(const int kSizeM, const int kSizeN, const int kSizeK,
@@ -258,7 +258,7 @@ void XgemmDirectNT(const int kSizeM, const int kSizeN, const int kSizeK,
 // Direct version of the GEMM kernel with [A, B] = [transposed, non-transposed]
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(MDIMCD, NDIMCD, 1)))
 #endif
 void XgemmDirectTN(const int kSizeM, const int kSizeN, const int kSizeK,
@@ -277,7 +277,7 @@ void XgemmDirectTN(const int kSizeM, const int kSizeN, const int kSizeK,
 // Direct version of the GEMM kernel with [A, B] = [transposed, transposed]
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(MDIMCD, NDIMCD, 1)))
 #endif
 void XgemmDirectTT(const int kSizeM, const int kSizeN, const int kSizeK,
