@@ -21,7 +21,7 @@ R"(
 // Main entry point of the kernel. This is the upper-triangular version.
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(MDIMC, NDIMC, 1)))
 #endif
 void XgemmUpper(const int kSizeN, const int kSizeK,
@@ -61,7 +61,7 @@ void XgemmUpper(const int kSizeN, const int kSizeK,
 // Main entry point of the kernel. This is the lower-triangular version.
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(MDIMC, NDIMC, 1)))
 #endif
 void XgemmLower(const int kSizeN, const int kSizeK,
@@ -105,7 +105,7 @@ void XgemmLower(const int kSizeN, const int kSizeK,
 // Main entry point of the kernel. This is the regular full version.
 #if RELAX_WORKGROUP_SIZE == 1
   __kernel
-#elif
+#else
   __kernel __attribute__((reqd_work_group_size(MDIMC, NDIMC, 1)))
 #endif
 void Xgemm(const int kSizeM, const int kSizeN, const int kSizeK,
